<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/currentSong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header1"
        android:layout_marginTop="14dp"
        android:text="@string/current_song" />

    <TextView
        android:id="@+id/header1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/currentSong"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:text="@string/header1"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/previousSong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/currentSong"
        android:layout_below="@+id/currentSong"
        android:layout_marginTop="33dp"
        android:text="@string/prev_song"
        android:onClick="handlePreviousSong" />

    <Button
        android:id="@+id/nextSong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/previousSong"
        android:layout_alignBottom="@+id/previousSong"
        android:layout_marginLeft="26dp"
        android:layout_toRightOf="@+id/previousSong"
        android:text="@string/next_song"
        android:onClick="handleNextSong" />

    <Button
        android:id="@+id/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/previousSong"
        android:layout_below="@+id/previousSong"
        android:layout_marginTop="28dp"
        android:text="@string/play"
        android:onClick="handlePlay" />

    <Button
        android:id="@+id/stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/play"
        android:layout_alignBottom="@+id/play"
        android:layout_toLeftOf="@+id/nextSong"
        android:onClick="handleStop"
        android:text="@string/stop" />

    <Button
        android:id="@+id/pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/stop"
        android:layout_alignBottom="@+id/stop"
        android:layout_alignLeft="@+id/nextSong"
        android:onClick="handlePause"
        android:text="@string/pause" />

    <Button
        android:id="@+id/quit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/play"
        android:layout_below="@+id/play"
        android:layout_marginTop="36dp"
        android:text="@string/quit"
        android:onClick="handleQuit" />

</RelativeLayout>